--- a/index.html
+++ b/index.html
@@ -40,17 +40,13 @@
    <!-- end loader -->
 
    <div class="wrapper">
-
       <div class="sidebar">
          <!-- Sidebar  -->
          <nav id="sidebar">
-
             <div id="dismiss">
                <i class="fa fa-arrow-left"></i>
             </div>
-
             <ul class="list-unstyled components">
-
                <li class="active">
                   <a href="#home">Home</a>
                </li>
@@ -67,7 +63,6 @@
                   <a href="#contact">Contact</a>
                </li>
             </ul>
-
          </nav>
       </div>
       <div id="content">
@@ -149,14 +144,30 @@
                </div>
             </div>
          </section>
+
          <!-- end section -->
-         <section id="cars"></section>
+         <section id="cars">
+            <div class="container pt-4">
+               <div class="full">
+                  <h3 class="main_heading _left_side margin_top_30 text-center">لیست همه موتر ها</h3>
+               </div>
+               <div class="row">
+                  <a href="#">
+                     <div class="card bg-dark col-lg-4 col-md-6">
+                        <img class="card-img" src="images/about_us.png" alt="Card image">
+                        <div class="card-img-overlay text-right">
+                          <h1 class="card-title"><span class="badge badge-primary">قیمت موتر</span></h1>
+                        </div>
+                      </div>
+                  </a>
+               </div>
+            </div>
+         </section>
+
          <!-- section -->
          <div id="about" class="section layout_padding">
             <div class="container">
-
                <div class="row">
-
                   <div class="col-lg-4 margin_top_30">
                      <div class="full margin_top_30">
                         <h3 class="main_heading _left_side margin_top_30">About Us</h3>
@@ -166,15 +177,12 @@
                         <a href="#">Read More</a>
                      </div>
                   </div>
-
                   <div class="col-lg-8">
                      <div class="full margin_top_50_rs">
                         <img class="img-responsive" src="images/about_us.png" alt="#" />
                      </div>
                   </div>
-
                </div>
-
             </div>
          </div>
          <!-- end section -->
@@ -182,15 +190,12 @@
          <!-- section -->
          <div class="section layout_padding padding_top_0">
             <div class="container">
-
                <div class="row">
-
                   <div class="col-lg-8">
                      <div class="full text_align_right r-img">
                         <img class="img-responsive" src="images/about_us_2.png" alt="#" />
                      </div>
                   </div>
-
                   <div class="col-lg-4 margin_top_30">
                      <div class="full margin_top_30">
                         <h3 class="main_heading _left_side margin_top_30">Our Cars</h3>
@@ -200,9 +205,7 @@
                         <a href="#">See More</a>
                      </div>
                   </div>
-
                </div>
-
             </div>
          </div>
          <!-- end section -->
@@ -478,22 +481,20 @@
          <!-- end footer -->
 
          <!-- copyright -->
-
          <div class="cpy_right">
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
                      <div class="full">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design">Free Html Templates</a>
+                        <p>© 2022 All Rights Reserved. Developed by <a href="https://resume-4756a.web.app/">Belal
+                              Noory</a>
                         </p>
                      </div>
                   </div>
                </div>
             </div>
          </div>
-
          <!-- right copyright -->
-
       </div>
    </div>
 
@@ -547,7 +548,6 @@
    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
    <!-- end google map js -->
-
 </body>
 
 </html>
