--- a/index.html
+++ b/index.html
@@ -48,19 +48,16 @@
             </div>
             <ul class="list-unstyled components">
                <li class="active">
-                  <a href="#home">Home</a>
+                  <a href="#home">صفحه اصلی</a>
                </li>
                <li>
-                  <a href="#about">About</a>
+                  <a href="#cars">لیست موتر ها</a>
                </li>
                <li>
-                  <a href="#why_choose_us">why Choose Us</a>
+                  <a href="#about">راجع به ما</a>
                </li>
                <li>
-                  <a href="#testimonial">Testimonial</a>
-               </li>
-               <li>
-                  <a href="#contact">Contact</a>
+                  <a href="#why_choose_us">چرا ما؟</a>
                </li>
             </ul>
          </nav>
@@ -78,7 +75,8 @@
                            <div class="col-lg-3 logo_section">
                               <div class="full">
                                  <div class="center-desk">
-                                    <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <div class="logo"> 
+                                       <a href="#"><img src="images/logo.png" alt="#"></a>
                                     </div>
                                  </div>
                               </div>
@@ -86,11 +84,14 @@
                            <div class="col-lg-9">
                               <div class="right_header_info">
                                  <ul>
-                                    <li><img style="margin-right: 15px;" src="images/phone_icon.png" alt="#" /><a
-                                          href="#">987-654-3210</a></li>
-                                    <li><img style="margin-right: 15px;" src="images/mail_icon.png" alt="#" /><a
-                                          href="#">demo@gmail.com</a></li>
-                                    <li><img src="images/search_icon.png" alt="#" /></li>
+                                    <li>
+                                       <img style="margin-right: 15px;" src="images/phone_icon.png" alt="#" />
+                                       <a href="tel:+93780295949">+93 780 295 949</a>
+                                       </li>
+                                    <li>
+                                       <img style="margin-right: 15px;" src="images/mail_icon.png" alt="#" />
+                                       <a href="mailto:info@motarafg.com">info@motarafg.com</a>
+                                    </li>
                                     <li>
                                        <button type="button" id="sidebarCollapse">
                                           <img src="images/menu_icon.png" alt="#" />
@@ -153,10 +154,10 @@
                </div>
                <div class="row">
                   <a href="#">
-                     <div class="card bg-dark col-lg-4 col-md-6">
+                     <div class="card bg-dark col-lg-4 col-md-6 p-0">
                         <img class="card-img" src="images/about_us.png" alt="Card image">
-                        <div class="card-img-overlay text-right">
-                          <h1 class="card-title"><span class="badge badge-primary">قیمت موتر</span></h1>
+                        <div class="card-img-overlay text-right" style="padding:0;margin: 0px;width: 100%;height: 100%;">
+                          <h1 class="card-title" style="margin: 0px;"><span class="badge badge-primary">قیمت موتر</span></h1>
                         </div>
                       </div>
                   </a>
@@ -165,30 +166,7 @@
          </section>
 
          <!-- section -->
-         <div id="about" class="section layout_padding">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-4 margin_top_30">
-                     <div class="full margin_top_30">
-                        <h3 class="main_heading _left_side margin_top_30">About Us</h3>
-                        <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod..</p>
-                     </div>
-                     <div class="full button_section margin_top_30">
-                        <a href="#">Read More</a>
-                     </div>
-                  </div>
-                  <div class="col-lg-8">
-                     <div class="full margin_top_50_rs">
-                        <img class="img-responsive" src="images/about_us.png" alt="#" />
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <!-- end section -->
-
-         <!-- section -->
-         <div class="section layout_padding padding_top_0">
+         <div class="section layout_padding" id="about">
             <div class="container">
                <div class="row">
                   <div class="col-lg-8">
@@ -198,11 +176,8 @@
                   </div>
                   <div class="col-lg-4 margin_top_30">
                      <div class="full margin_top_30">
-                        <h3 class="main_heading _left_side margin_top_30">Our Cars</h3>
+                        <h3 class="main_heading _left_side margin_top_30">راجع به ما</h3>
                         <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod..</p>
-                     </div>
-                     <div class="full button_section margin_top_30">
-                        <a href="#">See More</a>
                      </div>
                   </div>
                </div>
@@ -216,7 +191,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <div class="full center">
-                        <h2 class="heading_main orange_heading">Why Choose Us</h2>
+                        <h2 class="heading_main orange_heading">چرا ما؟</h2>
                      </div>
                   </div>
                </div>
@@ -251,167 +226,6 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-12 margin_top_30">
-                     <div class="full center button_section margin_top_30">
-                        <a class="margin_top_30" href="#">Read More</a>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-         <!-- end section -->
-
-         <!-- section -->
-         <section id="testimonial" class="dark_bg_orange layout_padding cross_layout_o padding_top_0">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-12">
-                     <div class="full center">
-                        <h2 class="heading_main orange_heading">Testimonials</h2>
-                     </div>
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                     <div class="full">
-                        <div id="testimonial_slider" class="carousel slide" data-ride="carousel">
-                           <!-- Indicators -->
-                           <ul class="carousel-indicators">
-                              <li data-target="#testimonial_slider" data-slide-to="0" class="active"></li>
-                              <li data-target="#testimonial_slider" data-slide-to="1"></li>
-                              <li data-target="#testimonial_slider" data-slide-to="2"></li>
-                           </ul>
-                           <!-- The slideshow -->
-                           <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                 <div class="testomonial_section">
-                                    <div class="full center">
-                                       <div class="client_img">
-                                          <img src="images/testimonial.png" alt="#" />
-                                       </div>
-                                    </div>
-                                    <div class="full testimonial_cont text_align_center">
-                                       <p><strong>Due markes</strong><br><strong
-                                             class="ornage_color">Rental</strong><br><i>Lorem ipsum dolor sit amet,
-                                             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                             dolor in reprehenderit in voluptate velit ess</i></p>
-                                       <div class="full text_align_center margin_top_30">
-                                          <img src="images/testimonial_qoute.png">
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-
-                              <div class="carousel-item">
-
-                                 <div class="testomonial_section">
-                                    <div class="full center">
-                                       <div class="client_img">
-                                          <img src="images/testimonial.png" alt="#" />
-                                       </div>
-                                    </div>
-                                    <div class="full testimonial_cont text_align_center">
-                                       <p><strong>Due markes</strong><br><strong
-                                             class="ornage_color">Rental</strong><br><i>Lorem ipsum dolor sit amet,
-                                             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                             dolor in reprehenderit in voluptate velit ess</i></p>
-                                       <div class="full text_align_center margin_top_30">
-                                          <img src="images/testimonial_qoute.png">
-                                       </div>
-                                    </div>
-                                 </div>
-
-                              </div>
-
-                              <div class="carousel-item">
-
-                                 <div class="testomonial_section">
-                                    <div class="full center">
-                                       <div class="client_img">
-                                          <img src="images/testimonial.png" alt="#" />
-                                       </div>
-                                    </div>
-                                    <div class="full testimonial_cont text_align_center">
-                                       <p><strong>Due markes</strong><br><strong
-                                             class="ornage_color">Rental</strong><br><i>Lorem ipsum dolor sit amet,
-                                             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                             dolor in reprehenderit in voluptate velit ess</i></p>
-                                       <div class="full text_align_center margin_top_30">
-                                          <img src="images/testimonial_qoute.png">
-                                       </div>
-                                    </div>
-                                 </div>
-
-                              </div>
-
-                           </div>
-
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-         <!-- end section -->
-
-         <!-- section -->
-         <section id="contact" class="dark_bg_blue layout_padding cross_layout padding_top_0 margin_top_0">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-12">
-                     <div class="full center">
-                        <h2 class="heading_main orange_heading">Contact Us</h2>
-                     </div>
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-md-6">
-                     <div class="full">
-                        <div class="contact_form">
-                           <form>
-                              <fieldset class="row">
-                                 <div class="col-md-12">
-                                    <div class="full field">
-                                       <input type="text" placeholder="Your Name" name="name" />
-                                    </div>
-                                 </div>
-                                 <div class="col-md-12">
-                                    <div class="full field">
-                                       <input type="email" placeholder="Email" name="email" />
-                                    </div>
-                                 </div>
-                                 <div class="col-md-12">
-                                    <div class="full field">
-                                       <input type="text" placeholder="Phone" name="number" />
-                                    </div>
-                                 </div>
-                                 <div class="col-md-12">
-                                    <div class="full field">
-                                       <textarea placeholder="Message"></textarea>
-                                    </div>
-                                 </div>
-                                 <div class="col-md-12">
-                                    <div class="full center">
-                                       <button class="submit_bt">Send</button>
-                                    </div>
-                                 </div>
-                              </fieldset>
-                           </form>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-6">
-                     <div class="full map_section">
-                        <div id="map">
-                        </div>
-                     </div>
-                  </div>
                </div>
             </div>
          </section>
@@ -435,43 +249,30 @@
                         </ul>
                      </div>
                   </div>
-                  <div class="col-md-4">
-                     <div class="full">
-                        <h4 class="widget_heading">SUBSCRIBE</h4>
-                     </div>
-                     <div class="full subribe_form">
-                        <form>
-                           <fieldset>
-                              <div class="field">
-                                 <input type="email" name="mail" placeholder="Enter your email" />
-                              </div>
-                              <div class="field">
-                                 <button class="submit_bt">Sumbit</button>
-                              </div>
-                           </fieldset>
-                        </form>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
+                  <div class="col-md-6">
                      <div class="full">
                         <h4 class="widget_heading">Usefull Links</h4>
                      </div>
                      <div class="full f_menu">
                         <ul>
-                           <li><a href="#">Home</a></li>
-                           <li><a href="#">About</a></li>
-                           <li><a href="#">Our Cars</a></li>
-                           <li><a href="#">Services</a></li>
-                           <li><a href="#">Testimonial</a></li>
+                           <li><a href="#home">صفحه اصلی</a></li>
+                           <li><a href="#cars">لیست موتر ها</a></li>
+                           <li><a href="#about">راجع به ما</a></li>
+                           <li><a href="#why_choose_us">چرا ما؟</a></li>
                         </ul>
                      </div>
                   </div>
                   <div class="col-md-4">
                      <div class="full">
-                        <h4 class="widget_heading">Contact Details</h4>
+                        <h4 class="widget_heading">ارتباط با ما</h4>
                         <div class="full cont_footer">
-                           <p><strong>AVALON Car : Adderess</strong><br><br>Newyork 10012, USA<br>Phone: +987 654
-                              3210<br>demo@gmail.com</p>
+                           <p>
+                              <strong>AVALON Car : Adderess</strong>
+                              <br><br>
+                              Newyork 10012, USA<br>
+                              Phone: +987 654 3210<br>
+                              demo@gmail.com
+                           </p>
                         </div>
                      </div>
                   </div>
