--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div id="content">
          <!-- section -->
-         <section id="home" class="top_section" dir="rtl">
+         <section id="home" class="top_section">
             <div class="row">
                <div class="col-lg-12">
                   <!-- header -->
@@ -87,7 +87,7 @@
                                     <li>
                                        <img style="margin-right: 15px;" src="images/phone_icon.png" alt="#" />
                                        <a href="tel:+93780295949">+93 780 295 949</a>
-                                       </li>
+                                    </li>
                                     <li>
                                        <img style="margin-right: 15px;" src="images/mail_icon.png" alt="#" />
                                        <a href="mailto:info@motarafg.com">info@motarafg.com</a>
